Use IntervalSet in CharSets